@@ -389,6 +389,7 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${org.apache.maven.plugins.maven-surefire-plugin.version}</version>
+					<!--
 					<configuration>
 						<parallel>all</parallel>
 						<threadCount>10</threadCount>
@@ -396,8 +397,9 @@
 						
 						<forkCount>5C</forkCount>
 						<reuseForks>true</reuseForks>
-						<argLine>--illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m</argLine>
+						<argLine>-  - illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m</argLine>
 					</configuration>
+					-->
 				</plugin>
 
 				<plugin>
